# OpenRouter

./: .gitignore  AGENT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  EXAMPLES.md  LICENSE  README.md  pyproject.toml  task.md
.github/workflows/: ci.yml
demo/: README.md  chat_demo.py  config.example.json  simple_example.py
docs/: Makefile  conf.py  index.rst  modules.rst  security.rst  usage.rst
openrouter/: __init__.py  client.py  exceptions.py  models.py  utils.py
tests/: conftest.py  test_benchmarks.py  test_exceptions.py  test_integration.py  test_openrouter.py  test_utils.py
